--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.png 
 
-repository: ityouknow/ityouknow.github.io
-github_url: https://github.com/ityouknow
+repository: zhangxiaobin123456/zhangxiaobin123456.github.io
+github_url: https://github.com/zhangxiaobin123456
 cnblog_url: http://www.cnblogs.com/ityouknow
 url: http://www.ityouknow.com
 enforce_ssl: ityouknow.com
